--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,19 +1,25 @@
 name: build
-on: [push]
+on:
+  push:
 jobs:
-  build:
+  xgo:
     name: Build
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        go_version:
+          - 1.15.x
     steps:
-
-    - name: Set up Go 1.15
-      uses: actions/setup-go@v1
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Build with xgo
+      uses: crazy-max/ghaction-xgo@v1
       with:
-        go-version: 1.15
-      id: go
-
-    - name: Check out code
-      uses: actions/checkout@v1
-
-    - name: Build
-      run: make all
+        xgo_version: latest
+        go_version: ${{ matrix.go_version }}
+        dest: build
+        targets: windows/amd64,linux/amd64,darwin/amd64
+        v: true
+        x: true
+        ldflags: -s -w
