--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,20 +7,27 @@ on:
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        go_version:
+          - 1.15.x
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Unshallow
+      - name: Unshallow
         run: git fetch --prune --unshallow
-      -
-        name: Set up Go
-        uses: actions/setup-go@v1
+      - name: Build with xgo
+        uses: crazy-max/ghaction-xgo@v1
         with:
-          go-version: 1.15.x
-      -
-        name: Run GoReleaser
+          xgo_version: latest
+          go_version: ${{ matrix.go_version }}
+          dest: build
+          targets: windows/amd64,linux/amd64,darwin/amd64
+          v: true
+          x: true
+          ldflags: -s -w
+      - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v1
         with:
           version: latest
