--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -11,6 +11,8 @@ builds:
       - windows
     goarch:
       - amd64
+    env:
+      - CGO_ENABLED=1
   - id: epithet-auth
     binary: epithet-auth
     main: ./cmd/epithet-auth/
